# gdata

./: CMakeLists.txt  LICENSE  README.md  array.c  array.h  list.c  list.h  stack.c  stack.h  test.c  vector.c  vector.h
C/: Array.c  Array.h  CMakeLists.txt  List.c  List.h  String.c  String.h  array.c  array.h
C/tests/: ListTest.c
examples/: CMakeLists.txt  ex1.c  ex2.c
gdata/: CMakeLists.txt  Makefile  README.md  array.c  array.h  autofree.c  autofree.h  list.c  list.h  stack.c  stack.h
gdata/tests/: ListTest  ListTest.c
include/gdata/: array.h  heap.h  list.h  stack.h  vector.h
src/: CMakeLists.txt  array.c  array.h  dict.c  dict.h  heap.c  heap.h  list.c  list.h  stack.c  stack.h  utils.h  vector.c  vector.h
src/utils/: print.h  sort.h  utils.h
tests/: CMakeLists.txt  run_tests.c  test_array.c  test_dict.c  test_heap.c  test_list.c  test_stack.c  test_vector.c
