include_directories(../src)

link_libraries(gdata)
add_executable(test_array test_array.c)
add_test(array_create test_array 0)
add_test(array_resize test_array 1)
add_test(array_join   test_array 2)
add_test(array_slice  test_array 3)
add_test(array_equals test_array 4)

add_executable(test_vector test_vector.c)
add_test(vector_create    test_vector 0)
add_test(vector_pushback  test_vector 1)
add_test(vector_equals    test_vector 2)
add_test(vector_slice     test_vector 3)
add_test(vector_copy      test_vector 4)
add_test(vector_remove    test_vector 5)
add_test(vector_pushfront test_vector 6)
add_test(vector_popback   test_vector 7)
add_test(vector_popfront  test_vector 8)

add_executable(test_list test_list.c)
add_test(list_create    test_list 0)
add_test(list_pushback  test_list 1)
add_test(list_pushfront test_list 2)
add_test(list_clear     test_list 3)
add_test(list_equals    test_list 4)
add_test(list_push      test_list 5)
add_test(list_pop       test_list 6)
add_test(list_at        test_list 7)
add_test(list_resize    test_list 8)
add_test(list_copy      test_list 9)
add_test(list_slice     test_list 10)

add_executable(test_stack test_stack.c)
add_test(stack_create    test_stack 0)
add_test(stack_clear     test_stack 1)
add_test(stack_push      test_stack 2)
add_test(stack_pop       test_stack 3)
add_test(stack_to_array  test_stack 4)
add_test(stack_reverse   test_stack 5)
add_test(stack_copy      test_stack 6)
add_test(stack_at        test_stack 7)
add_test(stack_value     test_stack 8)
add_test(stack_equals    test_stack 9)

add_executable(test_heap test_heap.c)
add_test(heap_create test_heap 0)
add_test(heap_push   test_heap 1)
add_test(heap_pop    test_heap 2)

add_executable(test_dict test_dict.c)
add_test(test_dict_creation_and_deletion  test_dict 0)
add_test(test_dict_set_adding             test_dict 1)
add_test(test_dict_sets                   test_dict 2)
add_test(test_dict_get                    test_dict 3)
add_test(test_dict_set_updating           test_dict 4)